userPanel nice adaptive until 480px

--- a/src/mainMenu/mainMenu-adaptive.scss
+++ b/src/mainMenu/mainMenu-adaptive.scss
@@ -86,9 +86,12 @@
     // Small mobile - more compact dropdown
     @media (max-width: 400px) {
       .menu {
+        flex-direction: column !important;
+        padding: 10px !important;
+        gap: 10px !important;
+
         a {
-          height: 35px !important;
-          font-size: 8px !important;
+          width: 100% !important;
         }
       }
     }
