--- a/src/formatButtons.scss
+++ b/src/formatButtons.scss
@@ -1,5 +1,5 @@
 /* Forum and Vocabularies comments Textarea bbcode formatting buttons */
-#fast-reply-controls {
+body #fast-reply-controls {
   tr {
     display: inline-flex !important;
     flex-wrap: wrap !important;
