--- a/src/base.scss
+++ b/src/base.scss
@@ -204,15 +204,12 @@ input {
 }
 
 select {
+  min-height: 32px !important;
   background: $deepgray !important;
   color: $white !important;
-  border: none !important;
-
-  &#savemodes {
-    background: $deepgray !important;
-    color: $white !important;
-    border: none !important;
-  }
+  border: 1px solid $gray !important;
+  border-radius: 5px !important;
+  padding: 0 10px !important;
 }
 
 .search input[name="text"] {
