added _BBToolsColors.scss to formatButtons.scss

--- a/src/data/_colors.scss
+++ b/src/data/_colors.scss
@@ -44,17 +44,17 @@ $yellow: hsl(50, 80%, 50%);
 $green: hsl(120, 50%, 50%);
 
 // Rank Color Variables
-$rang1: hsl(0, 0%, 80%);
-$rang2: hsl(180, 70%, 70%);
-$rang3: hsl(120, 70%, 50%);
-$rang4: hsl(55, 100%, 40%);
-$rang5: hsl(30, 100%, 60%);
-$rang6: hsl(340, 100%, 55%);
-$rang7: hsl(275, 70%, 70%);
-$rang8: hsl(240, 100%, 80%);
-$rang9: hsl(200, 80%, 70%);
-$rang10: hsl(300, 55%, 50%);
-$rang11: hsl(50, 100%, 50%);
+$rang1: hsl(0, 0%, 80%); // Новичок (Newbie)
+$rang2: hsl(180, 70%, 70%); // Любитель (Amateur)
+$rang3: hsl(120, 70%, 50%); // Таксист (Taxi Driver)
+$rang4: hsl(55, 100%, 40%); // Профи (Pro)
+$rang5: hsl(30, 100%, 60%); // Гонщик (Racer)
+$rang6: hsl(340, 100%, 55%); // Маньяк (Maniac)
+$rang7: hsl(275, 70%, 70%); // Супермен (Superman)
+$rang8: hsl(240, 100%, 80%); // Кибергонщик (Cyber Racer)
+$rang9: hsl(200, 80%, 70%); // Экстракибер (Extra Cyber)
+$rang10: hsl(300, 55%, 50%); // Тахион (Tachyon)
+$rang11: hsl(50, 100%, 50%); // Гиперион (Hyperion)
 
 // Game type colors
 $gametype-normal: hsl(0, 0%, 70%);
