--- a/src/main.scss
+++ b/src/main.scss
@@ -37,7 +37,7 @@
 // -----------------------------------------------------------------------------
 @import "components";
 @import "modalDialogue";
-@import "formatButtons";
+@import "./formatButtons/formatButtons";
 @import "calendar";
 @import "notifications";
 @import "pagination";
