BBTools styled smiles panel.

--- a/src/login.scss
+++ b/src/login.scss
@@ -55,13 +55,13 @@
 }
 
 /* Login && register popup close button */
-.popup-box .close ins {
-  filter: invert(60%) !important;
+// .popup-box .close ins {
+//   filter: invert(60%) !important;
 
-  &:hover {
-    filter: invert(70%) !important;
-  }
-}
+//   &:hover {
+//     filter: invert(70%) !important;
+//   }
+// }
 
 /* Login form popup */
 #login-form {
