--- a/src/gamelist.scss
+++ b/src/gamelist.scss
@@ -147,11 +147,15 @@
 
 #gamelist {
   .name {
-    min-height: 22px !important;
+    min-height: 24px !important;
+    display: inline-flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    width: 100% !important;
 
     i {
-      width: 22px !important;
-      height: 22px !important;
+      width: 24px !important;
+      height: 24px !important;
       border-radius: 2px !important;
       background-color: transparent !important;
     }
