.players padding 2px

--- a/src/gamelist.scss
+++ b/src/gamelist.scss
@@ -146,6 +146,10 @@
 }
 
 #gamelist {
+  .players {
+    padding: 2px !important;
+  }
+
   .name {
     min-height: 24px !important;
     display: inline-flex !important;
