--- a/src/gamelist.scss
+++ b/src/gamelist.scss
@@ -1,243 +1,224 @@
 @import "./data/variables";
 
-/* GAMELIST */
-.r {
-  .tr,
-  .bl,
-  .br,
-  &.tl {
+#content {
+  /* GAMELIST CREATE SECTION */
+  .gamelist-create {
     margin-bottom: 0 !important;
     background: none !important;
-  }
-}
 
-.gamelist-create {
-  margin-bottom: 0 !important;
-  background: none !important;
-
-  .rc {
-    padding: 10px 0 !important;
-  }
-
-  #savedModes {
-    margin-right: 10px !important;
-  }
-
-  form {
-    display: inline-flex;
-    font-size: 0;
-    color: $white !important;
-
-    input#create_game,
-    input#delete {
-      color: transparent !important;
-      border: none !important;
-      background-color: rgba(200, 200, 200, 0.3) !important;
-      padding: 0 !important;
-      display: inline-flex !important;
-      width: 35px !important;
-      height: 35px !important;
-      border-radius: 50% !important;
-      cursor: pointer !important;
-      transition: background-color 0.3s !important;
-      background-position: center center;
-      background-repeat: no-repeat;
-      margin-right: 5px !important;
-    }
-
-    input#create_game {
-      background-image: $icon-plus;
-
-      &:hover {
-        background-color: rgba(134, 226, 213, 0.5) !important;
-      }
-    }
-
-    input#delete {
-      background-image: $icon-x;
-
-      &:hover {
-        background-color: rgba(240, 52, 52, 0.5) !important;
-      }
-    }
-
-    span input[type="button"] {
-      margin-right: 5px !important;
-      background-image: $icon-eye-off;
-      background-position: center center;
-      background-repeat: no-repeat;
-    }
-  }
-}
-
-#gamelist {
-  .tl {
-    display: none !important;
-  }
-
-  td.enter {
-    padding: 0 !important;
-    margin: 0 !important;
-
-    div.enter {
-      padding: 0 !important;
-      margin: 0 5px 0 0 !important;
-    }
-
-    a {
-      display: block !important;
-      box-sizing: border-box !important;
-      width: 63px !important;
-      height: 63px !important;
-      background: $race !important;
-      background-size: contain !important;
-      padding-left: 63px !important;
-      filter: brightness(0.8) !important;
-
-      &:hover {
-        display: block !important;
-        box-sizing: border-box !important;
-        width: 63px !important;
-        height: 63px !important;
-        padding-left: 63px !important;
+    .r {
+      .tr,
+      .bl,
+      .br,
+      &.tl {
+        background: none !important;
       }
 
-      &.competition {
-        display: block !important;
-        box-sizing: border-box !important;
-        width: 63px !important;
-        height: 63px !important;
-        background: $competition !important;
-        background-size: contain !important;
-        padding-left: 63px !important;
+      .rc {
+        padding: 10px 0 !important;
 
-        &:hover {
-          display: block !important;
-          box-sizing: border-box !important;
-          width: 63px !important;
-          height: 63px !important;
-          padding-left: 63px !important;
-          filter: brightness(0.8) !important;
+        form {
+          display: inline-flex;
+          font-size: 0;
+
+          #savedModes {
+            margin-right: 10px !important;
+          }
+
+          input#create_game,
+          input#delete {
+            color: transparent !important;
+            border: none !important;
+            background-color: $gray !important;
+            padding: 0 !important;
+            display: inline-flex !important;
+            width: 35px !important;
+            height: 35px !important;
+            border-radius: 50% !important;
+            cursor: pointer !important;
+            transition: background-color 0.15s !important;
+            background-repeat: no-repeat !important;
+            background-position: center !important;
+            margin-right: 5px !important;
+          }
+
+          input#create_game {
+            background-image: $add-game-icon !important;
+
+            &:hover {
+              background-color: $green !important;
+            }
+          }
+
+          input#delete {
+            background-image: $remove-game-icon !important;
+
+            &:hover {
+              background-color: $red !important;
+            }
+          }
         }
       }
     }
   }
 
-  td.sign {
-    padding: 0 4px 0 8px !important;
-  }
-
-  .remain span {
-    color: $white !important;
-    background-position: 0 -25px !important;
-  }
-
-  .custominfo {
-    color: $white !important;
-  }
-
-  .item td {
-    border-top: none !important;
-  }
-
-  #gamelist-active .item td {
-    border: none !important;
-  }
-}
-
-#gamelist {
-  .players {
-    padding: 2px !important;
-  }
-
-  .name {
-    min-height: 24px !important;
-    display: inline-flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-    width: 100% !important;
-
-    i {
-      width: 24px !important;
-      height: 24px !important;
-      border-radius: 2px !important;
-      background-color: transparent !important;
-    }
-    a {
-      border: none !important;
-      padding-left: 8px !important;
-    }
-  }
-
-  .item td {
-    border-top: none !important;
-  }
-
-  .custominfo {
-    color: $white !important;
-  }
-}
-
-#gamelist-active {
-  background: $darkgray !important;
-  border-top: 1px solid $gray !important;
-
-  button.hide-btn {
-    background: $darkgray !important;
-    border: 1px solid $gray !important;
-    color: $gray !important;
-
-    &:hover {
-      background: $deepgray !important;
-      border: 1px solid $blue !important;
-      color: $blue !important;
-    }
-
-    .glyphicon {
+  /* GAMELIST SECTION */
+  #gamelist {
+    // Animation control slider (static or smooth)
+    .tl {
       display: none !important;
     }
-  }
 
-  &.hide-block {
-    background-color: $darkgray !important;
-    border: none !important;
-    margin: 0 !important;
+    .item {
+      td {
+        border: none !important;
+      }
 
-    h3,
-    h4 {
-      color: $gray !important;
+      td.enter,
+      td.sign,
+      td.status,
+      td.players {
+        padding: 0 10px 0 0 !important;
+      }
+
+      td.enter {
+        .enter {
+          margin: 0 !important;
+        }
+
+        a {
+          display: block !important;
+          box-sizing: border-box !important;
+          width: 63px !important;
+          height: 63px !important;
+          background: $race !important;
+          background-size: contain !important;
+          padding-left: 63px !important;
+          filter: brightness(0.8) !important;
+
+          &:hover {
+            display: block !important;
+            box-sizing: border-box !important;
+            width: 63px !important;
+            height: 63px !important;
+            padding-left: 63px !important;
+          }
+
+          &.competition {
+            display: block !important;
+            box-sizing: border-box !important;
+            width: 63px !important;
+            height: 63px !important;
+            background: $competition !important;
+            background-size: contain !important;
+            padding-left: 63px !important;
+
+            &:hover {
+              display: block !important;
+              box-sizing: border-box !important;
+              width: 63px !important;
+              height: 63px !important;
+              padding-left: 63px !important;
+              filter: brightness(0.8) !important;
+            }
+          }
+        }
+      }
+
+      td.sign {
+        .gametype-sign {
+          margin: 0 !important;
+        }
+      }
     }
 
-    button {
-      background: $darkgray !important;
-      color: $gray !important;
-      border: 1px solid $gray !important;
+    .remain span {
+      color: $lightblue !important;
+      background-position: 0 -25px !important;
+    }
 
-      &:hover {
-        background: $deepgray !important;
-        color: $blue !important;
-        border: 1px solid $blue !important;
+    .custominfo {
+      .competition {
+        color: $yellow !important;
+      }
+
+      .cost {
+        color: $orange !important;
+      }
+    }
+
+    .players {
+      .name {
+        min-height: 24px !important;
+        display: inline-flex !important;
+        align-items: center !important;
+        justify-content: center !important;
+        width: 100% !important;
+
+        i {
+          width: 24px !important;
+          height: 24px !important;
+          border-radius: 2px !important;
+          background-color: transparent !important;
+        }
+
+        a {
+          border: none !important;
+          padding-left: 8px !important;
+        }
+      }
+
+      .numbers {
+        top: 0 !important;
       }
     }
   }
-}
 
-.recent-game {
-  margin: 4px 4px !important;
-  border: 1px solid $gray !important;
-  transition: all 0.2s !important;
+  /* GAMELIST ACTIVE SECTION */
+  #gamelist-active {
+    background: $darkgray !important;
+    border-top: 1px solid $gray !important;
+    margin-top: 20px !important;
 
-  &:hover {
-    border: 1px solid $blue !important;
-    background: $deepgray !important;
-    transition: all 0.2s !important;
-  }
-}
+    button.hide-btn {
+      top: 0 !important;
+      right: 0 !important;
+      background: $gray !important;
+      color: $black !important;
+      transition: all 0.15s ease-out !important;
 
-#recent-games {
-  .recent-game-description,
-  .recent-game-levels,
-  .recent-game-name {
-    color: $white !important;
+      &:hover {
+        background: $blue !important;
+      }
+
+      .glyphicon {
+        display: none !important;
+      }
+    }
+
+    &.hide-block {
+      background-color: $darkgray !important;
+      border: none !important;
+      margin: 0 !important;
+
+      h3,
+      h4 {
+        color: $gray !important;
+      }
+
+      button {
+        background: $gray !important;
+        color: $black !important;
+        transition: all 0.15s ease-out !important;
+
+        &:hover {
+          background: $blue !important;
+        }
+
+        .glyphicon {
+          display: none !important;
+        }
+      }
+    }
   }
 }
