--- a/src/logo/logo.scss
+++ b/src/logo/logo.scss
@@ -9,6 +9,7 @@
   padding: 0 !important;
   float: none !important;
   position: fixed !important;
+  top: 45px !important;
   background-color: $darkgray !important;
   border-radius: 0 0 6px 6px !important;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.7) !important;
