--- a/src/pagination.scss
+++ b/src/pagination.scss
@@ -7,7 +7,8 @@
   background: transparent !important;
   margin: 10px !important;
   position: fixed !important;
-  top: 50px !important;
+  bottom: 50% !important;
+  transform: translateY(50%) !important;
   right: 10px !important;
   z-index: 120 !important;
   transition: opacity 0.15s ease-out !important;
