remove image based corners on container globally in garbage.scss and this is much cleaner approach than previous awful performance

--- a/src/garbage.scss
+++ b/src/garbage.scss
@@ -5,3 +5,15 @@
 #test {
   display: none !important;
 }
+
+// Remove background images from container corners
+.t,
+.b,
+.l,
+.r,
+.tl,
+.tr,
+.bl,
+.br {
+  background: none !important;
+}
