--- a/src/write/write-adaptive.scss
+++ b/src/write/write-adaptive.scss
@@ -2,9 +2,9 @@
 
 @media (max-width: 1200px) {
   // Forum
-  #content td.write:has(textarea),
+  #content #posts-list td.write:has(textarea),
   // Vocabulary
-  #content dl.write:has(textarea) {
+  #content #profile-block dl.write:has(textarea) {
     top: unset !important;
     bottom: 0 !important;
     right: unset !important;
@@ -32,8 +32,13 @@
     top: -20px !important;
   }
 
-  // Posts-list repositioning with portrait orientation:
-  body:has(.write:focus-within) #content .minwidth_container {
+  // Repositioning with portrait orientation for Forum and Vocabulary
+  body:has(
+      #posts-list td.write:focus-within,
+      #profile-block dl.write:focus-within
+    )
+    #content
+    .minwidth_container {
     @include content-reposition-focused("portrait");
   }
 }
