Better forum list of branches

--- a/src/main.scss
+++ b/src/main.scss
@@ -60,7 +60,7 @@
 @import "gametypes";
 @import "createGame";
 @import "race";
-@import "forum";
+@import "./forum/forum";
 @import "chatlogs";
 @import "chat";
 @import "./stats/stats";
