--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -30,3 +30,19 @@
     width: calc(60vw - 50px) !important;
   }
 }
+
+// Position element in the parent container full width and height
+@mixin element-full-size() {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+// Flexbox centering mixin
+@mixin flex-center($justify: center, $align: center) {
+  display: flex !important;
+  justify-content: $justify !important;
+  align-items: $align !important;
+}
