--- a/src/main.scss
+++ b/src/main.scss
@@ -21,6 +21,7 @@
 @import "base";
 @import "nameRankColor";
 @import "garbage";
+@import "formatContent";
 
 // -----------------------------------------------------------------------------
 // 4. LAYOUT COMPONENTS
